# Praesidium

./: CMakeLists.txt  README.md
include/Data/CoreData/: AppState.h  Configuration.h  GameContext.h  Vector2Int.h
include/Data/EntityData/: ActionData.h  PlayerData.h
include/Data/UIData/: BuildingMenuData.h  UIData.h  WidgetData.h
include/Data/WorldData/: BuildingData.h  ItemData.h  MapData.h  RecipeData.h
include/Engine/: WindowManager.h
include/Engine/Config/: WorldConfig.h
include/Engine/Core/: Application.h  Camera.h  GameStates.h  Window.h
include/Interface/: MenuController.h  RenderLayer.h  UIData.h
include/Interface/UI/: BuildingMenuRenderer.h  MainMenuRenderer.h
include/Interface/UI/CoreUI/: BuildingMenuRenderer.h  MainMenuSystem.h
include/Interface/World/: BuildingRenderer.h  FloatingText.h  MapRenderer.h  PlayerRenderer.h
include/Systems/: BuildingMenuSystem.h  BuildingSystem.h  CameraSystem.h  ChunkSystem.h  ConveyorSystem.h  InteractionSystem.h  MapSystem.h  PlayerSystem.h
include/Systems/Simulation/: InteractionSystem.h  MapSystem.h  PlayerSystem.h
include/Systems/UI/: BuildingMenuSystem.h
include/Systems/World/: BuildingSystem.h  MapSystem.h
src/: main.cpp
src/Engine/: WindowManager.cpp
src/Engine/Core/: Application.cpp  Camera.cpp  CameraManager.cpp  GameStates.cpp  Window.cpp  WindowManager.cpp
src/Interface/: MenuController.cpp  RenderLayer.cpp
src/Interface/UI/: BuildingMenuRenderer.cpp  MainMenuRenderer.cpp
src/Interface/UI/CoreUI/: BuildingMenuRenderer.cpp  MainMenuRenderer.cpp  MainMenuSystem.cpp
src/Interface/World/: BuildingRenderer.cpp  MapRenderer.cpp  PlayerRenderer.cpp
src/Systems/: BuildingMenuSystem.cpp  BuildingSystem.cpp  CameraSystem.cpp  ChunkSystem.cpp  ConveyorSystem.cpp  InteractionSystem.cpp  MapSystem.cpp  PlayerSystem.cpp
src/Systems/Simulation/: InteractionSystem.cpp  MapSystem.cpp  PlayerSystem.cpp
src/Systems/UI/: BuildingMenuSystem.cpp
src/Systems/World/: BuildingSystem.cpp  MapSystem.cpp
